feat(pages/GamePlay): add panel and board design

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-    background-color: #9c4b00;
+    background-color: #323232;
     font-family: "DOSMyungjo";
     margin: 0;
 }
