--- a/src/styles/GamePlay.css
+++ b/src/styles/GamePlay.css
@@ -42,6 +42,24 @@
 
 .gamePlay {
     height: 75vh;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+.events {
+    padding-left: 10%;
+    padding-right: 5%;
+}
+
+.eventButton {
+    width: 30vw;
+    height: 8vw;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: transparent;
+    border: 0;
+    margin-top: 10px;
 }
 
 .select {
@@ -55,7 +73,7 @@
         height: 60px;
     }
 
-    .info {
+    .detail {
         font-size: 20px;
     }
 
@@ -71,7 +89,7 @@
         height: 70px;
     }
 
-    .info {
+    .detail {
         font-size: 30px;
     }
 
@@ -87,7 +105,7 @@
         height: 80px;
     }
 
-    .info {
+    .detail {
         font-size: 40px;
     }
 
@@ -103,7 +121,7 @@
         height: 100px;
     }
 
-    .info {
+    .detail {
         font-size: 50px;
     }
 
