feat(pages/GamePlay): create settings.json and add basic turn function

--- a/src/styles/GamePlay.css
+++ b/src/styles/GamePlay.css
@@ -85,6 +85,7 @@
 }
 
 .unitDetailContainer .description {
+    white-space: pre-line;
     height: 8vw;
     display: flex;
     align-items: center;
