feat(pages/GamePlay): create/remove buildings

--- a/src/styles/GamePlay.css
+++ b/src/styles/GamePlay.css
@@ -138,6 +138,9 @@
 }
 
 .buildingDetailContainer .description {
+    padding-left: 5%;
+    padding-right: 5%;
+    white-space: pre-line;
     height: 8vw;
     display: flex;
     align-items: center;
