--- a/src/styles/GamePlay.css
+++ b/src/styles/GamePlay.css
@@ -35,6 +35,10 @@
     height: 5vh;
 }
 
+.detail {
+    white-space: pre-line;
+}
+
 .infoDetail {
     text-align: center;
     font-weight: bolder;
@@ -53,6 +57,7 @@
 }
 
 .eventButton {
+    font-family: "DOSMyungjo";
     width: 30vw;
     height: 8vw;
     background-repeat: no-repeat;
@@ -176,6 +181,10 @@
         width: 70px;
         height: 70px;
     }
+
+    .eventButton {
+        font-size: 15px;
+    }
 }
 
 @media (min-width: 1280px) {
@@ -195,6 +204,10 @@
     .bigBtn img {
         width: 80px;
         height: 80px;
+    }
+
+    .eventButton {
+        font-size: 20px;
     }
 }
 
@@ -216,6 +229,10 @@
         width: 120px;
         height: 120px;
     }
+
+    .eventButton {
+        font-size: 30px;
+    }
 }
 
 @media (min-width: 2560px) {
@@ -235,5 +252,9 @@
     .bigBtn img {
         width: 150px;
         height: 150px;
+    }
+
+    .eventButton {
+        font-size: 40px;
     }
 }
